tests/stage3/semantic_implement_param_type_mismatch.err
type error
line: 10
interface method parameter type mismatch
parameter: 2
expected: bool
got: i32
