tests/stage3/semantic_implement_param_type_mismatch.imp
interface Score {
    function add(self, delta: bool) -> i32
}

struct Counter {
    value: i32
}

implement Score for Counter {
    function add(self, delta: i32) -> i32 => self.value
}

function main() {
    print(0)
}
